# cocos2d-generic

./: .gitmodules  CMakeLists.txt
audioModule/: CMakeLists.txt  audioEngine.cpp  audioEngine.h  audioEngineInstance.cpp  audioEngineInstance.h
cmake/: empty.cpp  empty.h  generic_dependency.cmake  helpers.cmake
coreModule/: gameManager.cpp  gameManager.h
coreModule/components/: debugComponent.cpp  debugComponent.h  nodeUtility.cpp  nodeUtility.h  taskHolderComponent.cpp  taskHolderComponent.h  transformComponent.cpp  transformComponent.h
coreModule/enums/: layersEnum.h  statesEnums.h
coreModule/nodes/: armatureHolderNode.h  eventNode.h  nodeFactory.cpp  nodeFactory.h  nodeProperties.cpp  nodeProperties.h  spriteNode.cpp  spriteNode.h  spriteParameters.cpp  spriteParameters.h  spritePolygon.cpp  spritePolygon.h
coreModule/nodes/components/: outlineComponent.cpp  outlineComponent.h  pivotComponent.cpp  pivotComponent.h
coreModule/nodes/propertyTypes/: asepriteProperty.cpp  asepriteProperty.h  clipProperty.cpp  clipProperty.h  colorProperty.cpp  colorProperty.h  dragonbonesProperty.cpp  dragonbonesProperty.h  forward.h  gridProperty.cpp  gridProperty.h  headers.h  labelProperty.cpp  labelProperty.h  propertyInterface.h  scale9SpriteProperty.cpp  scale9SpriteProperty.h  scrollViewProperty.cpp  scrollViewProperty.h  spineProperty.cpp  spineProperty.h  spriteProperty.cpp  spriteProperty.h  transformProperty.cpp  transformProperty.h
coreModule/nodes/types/: armatureNode.cpp  armatureNode.h  asepriteNode.cpp  asepriteNode.h  buttonBase.cpp  buttonBase.h  buttonNode.cpp  buttonNode.h  buttonType.cpp  buttonType.h  drawNodeBase.h  eventNode.h  gridNode.cpp  gridNode.h  node3d.h  shaderNode.cpp  shaderNode.h  soundButton.cpp  soundButton.h  spritePolygon.cpp  spritePolygon.h  taskHolder.cpp  taskHolder.h
coreModule/nodes/widgets/: armatureHolderNode.cpp  buttonBase.h  (+16 more)
coreModule/physicsShape/: physicsShapeCache.cpp  physicsShapeCache.h
coreModule/resources/: resourceManager.cpp  resourceManager.h
coreModule/scenes/: layersEnum.h  mainScene.cpp  mainScene.h  sceneInterface.cpp  sceneInterface.h  scenesFactoryInstance.cpp  scenesFactoryInstance.h
coreModule/signals/: signalHolder.cpp  signalHolder.h  signalInstance.cpp  signalInstance.h
databaseModule/: databaseInterface.h  databaseManager.cpp  databaseManager.h  databaseManagerInterface.h
debugModule/: CMakeLists.txt  imGuiLayer.cpp  imGuiLayer.h  imguiController.cpp  imguiController.h  logManager.cpp  logManager.h  mainDebugOverlay.cpp  mainDebugOverlay.h
debugModule/propertyViewer/: baseProperty.cpp  baseProperty.h  colorProperty.cpp  colorProperty.h  debugProperty.cpp  debugProperty.h  fairyProperty.cpp  fairyProperty.h  labelProperty.cpp  labelProperty.h  propertyInterface.h  propertyViewer.cpp  propertyViewer.h  spineProperty.cpp  spineProperty.h  spriteProperty.cpp  spriteProperty.h  transformProperty.cpp  transformProperty.h
profileModule/: profileBlockInterface.h  profileManager.cpp  profileManager.h
utilityModule/: CMakeLists.txt  convertUtility.h  covertUtility.h  findUtility.h  jsonHelper.h  logManager.cpp  logManager.h  randomUtility.h  stringUtility.cpp  stringUtility.h  utils.h
utilityModule/uuidGenerator/: endianness.h  uuid.h  uuidGenerator.cpp  uuidGenerator.h
(+10 files in other folders)
